2016-02-25	Confusion and enhancements.  (2)

		include/biting-pear/kthxbai.h :
		- now obscures addresses of constants emitted in read-only
		  and read/write data sections

		include/biting-pear/lolwut.h :
		- improved comments
		- x86-64 `leaq' inline assembly statements are no longer
		  marked as modifying the condition flags, while x86-32
		  `addl' statements are thus marked
		- added handling of addresses of static constants

		GNUmakefile :
		- added `share/biting-pear/%.s: share/biting-pear/%.ii' rule
		  for debugging

2016-02-24	Confusion and enhancements.

		bin/biting-pear-doge.ccc :
		- now allows relocations in object file being frobbed ---
		  only the frobbed section needs to be relocation-free

		include/biting-pear/kthxbai.h :
		- now deliberately emits constants in static read-only and
		  read/write data sections

		include/biting-pear/orly.h :
		- added orly<...>::wut(...)

		GNUmakefile :
		- fixed `%.s: %.ccc' rule

2016-02-21	Renamed test cases.

		test/test-kthxbai.ccc ,
		test/test-kthxbai.good :
		- renamed test-1 to test-kthxbai

		test/test-kthxbai-p.ccc ,
		test/test-kthxbai-p.good :
		- renamed test-2 to test-kthxbai-p

		test/test-orly.ccc ,
		test/test-orly.good :
		- renamed test-3 to test-orly

		test/test-dawg.ccc ,
		test/test-dawg.good :
		- renamed test-extra-1 to test-dawg

		test/test-yodawg.ccc ,
		test/test-yodawg.good :
		- renamed test-extra-2 to test-yodawg

		test/test-dawg-syn.ccc ,
		test/test-dawg-syn.good :
		- renamed test-extra-3 to test-dawg-syn

		test/test-yodawg-syn.ccc ,
		test/test-yodawg-syn.good :
		- renamed test-extra-4 to test-yodawg-syn

		GNUmakefile ,
		.gitignore :
		- updated

2016-02-20	Some x86 and x86-64 enhancements, and a bit more.

		GNUmakefile :
		- updated %.s rule

		include/biting-pear/omg.h :
		- now adds a random prefix before `retl'/`retq'/`lretl'/
		  `lretq' on x86 and x86-64
		- now also adds junk bytes for x86-64

		test/test-extra-3.ccc :
		- really stress-test...
